tests/purs/failing/TypeWildcards4.purs
-- @shouldFailWith ErrorParsingModule
module Main where

type OhNo = ((Int) :: _)
