tests/purs/failing/TypeWildcards4.out
Error found:
at tests/purs/failing/TypeWildcards4.purs:4:23 - 4:24 (line 4, column 23 - line 4, column 24)

  Unable to parse module:
  Unexpected wildcard in type; type wildcards are only allowed in value annotations


See https://github.com/purescript/documentation/blob/master/errors/ErrorParsingModule.md for more information,
or to contribute content related to this error.

